[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SongSelect.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUI/Menus/Title_Screen.png" type="Texture" id=2]
[ext_resource path="res://SongSelect.tres" type="Theme" id=3]

[node name="SongSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 500, 300 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 300.0
margin_top = 400.0
margin_right = 568.0
margin_bottom = 450.0

[node name="EasyButton" type="Button" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 34.0
theme = ExtResource( 3 )
text = "Easy: Scale"

[node name="Score" type="Label" parent="VBoxContainer/EasyButton"]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )

[node name="MediumButton" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 288.0
margin_bottom = 72.0
theme = ExtResource( 3 )
text = "Medium: When The Saints Go Marching In"

[node name="Score" type="Label" parent="VBoxContainer/MediumButton"]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )

[node name="HardButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 288.0
margin_bottom = 110.0
theme = ExtResource( 3 )
text = "Hard: For the Buzzards"

[node name="Score" type="Label" parent="VBoxContainer/HardButton"]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )

[connection signal="pressed" from="VBoxContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MediumButton" to="." method="_on_MediumButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HardButton" to="." method="_on_HardButton_pressed"]
